# trader-bro

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml
bot/: agent.py  coinbase_client.py  database.py  market_signals.py  notifications.py
bot/migrations/: 001_initial.sql  002_add_tokens.sql  003_price_targets.sql  004_add_error_column.sql  005_price_target_reasoning.sql
prompts/: system_prompt.txt
scripts/: create_migration.py  run.sh
